--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 55rem;
   margin-top: 4rem;
-  background: url(../../imgs/social-media-box.jpg);
+  background: url("/../../imgs/social-media-box.jpg");
   //background-size: cover;
   //background-position: top;
   padding: 3rem 7rem;
