--- a/sass/components/_findus.scss
+++ b/sass/components/_findus.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("/../../imgs/green-bg.jpg");
+  background: url("./imgs/green-bg.jpg");
 
   & h2 {
     position: relative;
