--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Helvetica Bold;
-    src: url("/../../fonts/helvetica_bold.ttf") format("opentype");
+    src: url("./fonts/helvetica_bold.ttf") format("opentype");
   }
   
   .header {
