--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
+@import "base/mixins";
 @import "base/base";
 
 @import "components/header";
+@import "components/dropdown";
 @import "components/slider";
 @import "components/products";
 @import "components/social";
