--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ body {
 
 @font-face {
   font-family: Lunchbox Regular;
-  src: url("../../fonts/lunchbox.otf") format("opentype"); }
+  src: url("../fonts/lunchbox.otf") format("opentype"); }
 
 .slider {
   height: 60rem;
