--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Lunchbox Regular;
-  src: url("../../fonts/lunchbox.otf") format("opentype");
+  src: url("../fonts/lunchbox.otf") format("opentype");
 }
 
 .slider {
