--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -42,6 +42,16 @@
     }
   }
 
+  &__slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    transition: all 3s ease;
+    opacity: 0;
+  }
+
   &__slide-1 {
     background-image: url(../imgs/slider-1.jpg);
 
@@ -73,4 +83,8 @@
     font-weight: 600;
     cursor: pointer;
   }
+}
+
+.visible-slide {
+  opacity: 1;
 }
