--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,7 +14,7 @@
 
   z-index: 5;
   @include respond(tab-land) {
-    height: 10.5rem
+    height: 10.5rem;
   }
 
   &__logo {
@@ -55,8 +55,8 @@
       display: inline-block;
       background: #fff;
       height: 0.7rem;
-      width: 5.5rem;
-      margin: 0.3rem 0;
+      width: 6.5rem;
+      margin: 0.5rem 0;
       border-radius: 3rem;
       transition: all 0.2s ease;
     }
