--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -53,7 +53,7 @@
 
     & span {
       display: inline-block;
-      background: #fff;
+      background: #000000;
       height: 0.7rem;
       width: 6.5rem;
       margin: 0.5rem 0;
