--- a/css/style.css
+++ b/css/style.css
@@ -209,16 +209,34 @@ body {
     opacity: 0; }
   .slider__slide-1 {
     background-image: url(../imgs/slider-1.jpg); }
+    @media only screen and (max-width: 37.5em) {
+      .slider__slide-1 {
+        background-image: url(../imgs/slider-mobile-1.jpg); } }
+    @media only screen and (max-width: 375px) {
+      .slider__slide-1 {
+        background-image: url(../imgs/mobile-slider-375-1.jpg); } }
     .slider__slide-1::after {
       opacity: 0;
       transition: all 3s ease; }
   .slider__slide-2 {
     background-image: url(../imgs/slider-2.jpg); }
+    @media only screen and (max-width: 37.5em) {
+      .slider__slide-2 {
+        background-image: url(../imgs/slider-mobile-2.jpg); } }
+    @media only screen and (max-width: 375px) {
+      .slider__slide-2 {
+        background-image: url(../imgs/mobile-slider-375-2.jpg); } }
     .slider__slide-2::after {
       opacity: 0;
       transition: all 3s ease; }
   .slider__slide-3 {
     background-image: url(../imgs/slider-3.jpg); }
+    @media only screen and (max-width: 37.5em) {
+      .slider__slide-3 {
+        background-image: url(../imgs/slider-mobile-3.jpg); } }
+    @media only screen and (max-width: 375px) {
+      .slider__slide-3 {
+        background-image: url(../imgs/mobile-slider-375-3.jpg); } }
   .slider--btn {
     font-size: 1.7rem;
     color: #fff;
@@ -238,6 +256,12 @@ body {
   background-image: url(../imgs/product-hanger.jpg);
   padding: 5rem 7rem;
   overflow: hidden; }
+  @media only screen and (max-width: 56.25em) {
+    .products {
+      padding: 5rem 3.5rem; } }
+  @media only screen and (max-width: 375px) {
+    .products {
+      background-image: url(../imgs/mobilevariantslider375.jpg); } }
   .products::after {
     content: "";
     position: absolute;
@@ -246,7 +270,14 @@ body {
     height: 100%;
     width: 100%;
     z-index: 1; }
+  .products__variants {
+    flex-shrink: 0;
+    flex-basis: 100%; }
+    .products__variants:nth-child(2) {
+      opacity: 0; }
   .products__slide {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-shrink: 0;
     transition: all 0.5s ease; }
@@ -255,12 +286,28 @@ body {
       top: 0;
       left: 0;
       opacity: 0; }
-      .products__slide-checkbox:checked ~ .products__variants:nth-child(2) {
+      .products__slide-checkbox:checked ~ .products__slide {
+        transform: translateX(-100%); }
+      .products__slide-checkbox:checked ~ .products__slide > .products__variants:nth-child(1) {
         opacity: 0; }
-      .products__slide-checkbox:checked ~ .products__variants:nth-child(3) {
+      .products__slide-checkbox:checked ~ .products__slide > .products__variants:nth-child(2) {
         opacity: 1; }
-    .products__slide-moved1 {
-      transform: translateX(-95%); }
+    .products__slide-checkbox2 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0; }
+      .products__slide-checkbox2:checked ~ .products__slide {
+        transform: translateX(-150%); }
+      @media only screen and (max-width: 37.5em) {
+        .products__slide-checkbox2:checked ~ .products__slide > .products__variants:nth-child(2) {
+          overflow: visible; } }
+      .products__slide-checkbox2:checked ~ .products__slide > .products__variants:nth-child(2)--variant:nth-child(1) {
+        opacity: 0; }
+      .products__slide-checkbox2:checked ~ .products__slide
+> .products__variants:nth-child(2)
+> .products__variants--variant:nth-child(1) {
+        opacity: 0; }
     .products__slide-nav {
       position: absolute;
       height: 100%;
@@ -271,6 +318,9 @@ body {
       cursor: pointer;
       justify-content: center;
       z-index: 2; }
+      @media only screen and (max-width: 56.25em) {
+        .products__slide-nav {
+          width: 4rem; } }
       .products__slide-nav svg {
         height: 7rem;
         width: 7rem;
@@ -287,16 +337,20 @@ body {
   .products__variants {
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 3rem;
     z-index: 2;
     margin-bottom: 1rem;
-    transition: all 0.1s ease; }
+    transition: all 0.1s ease;
+    overflow: hidden;
+    flex-shrink: 0; }
     .products__variants--variant {
       height: 49rem;
-      width: 32rem;
+      flex-basis: 34%;
+      flex-shrink: 0;
       background: #ffd26c; }
+      @media only screen and (max-width: 37.5em) {
+        .products__variants--variant {
+          flex-basis: 50%; } }
       .products__variants--variant figure {
         background: url(../imgs/variant-placeholder.jpg);
         height: 70%; }
@@ -317,17 +371,13 @@ body {
         cursor: pointer; }
       .products__variants--variant:nth-child(1) {
         background: #ffd26c; }
-      .products__variants--variant:nth-child(2) {
-        margin: 0 0.5rem; }
     .products__variants:nth-child(2) {
-      transform: translateX(2rem);
       z-index: 2; }
     .products__variants:nth-child(3) {
       opacity: 0;
       z-index: 1; }
     .products__variants--cassava figure {
-      background: url(../imgs/variant-1.jpg);
-      height: 70%; }
+      background: url(../imgs/variant-1.jpg); }
   .products--nav {
     display: flex;
     justify-content: center; }
@@ -340,26 +390,39 @@ body {
       background: #fff;
       cursor: pointer;
       transition: al 0.5s ease; }
+    .products--nav span:nth-child(3) {
+      display: none; }
+      @media only screen and (max-width: 37.5em) {
+        .products--nav span:nth-child(3) {
+          display: inline-block; } }
 
 .social {
   position: relative;
   height: 55rem;
   margin-top: 4rem;
   background: url(../imgs/social-media-box.jpg);
-  padding: 3rem 7rem; }
+  padding: 5rem 7rem; }
+  @media only screen and (max-width: 75em) {
+    .social {
+      padding: 5rem 3.5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .social {
+      height: 76rem; } }
+  @media only screen and (max-width: 375px) {
+    .social {
+      background-image: url(../imgs/mobile-socialfeed375.jpg); } }
   .social h2 {
     position: relative;
     font-size: 9rem;
     color: rgba(30, 39, 46, 0.6);
-    z-index: 2;
-    padding: 0 4rem; }
+    z-index: 2; }
   .social__socials {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 2rem; }
     .social__socials--card {
       position: relative;
-      width: 40rem;
+      flex-basis: 44%;
       height: 36rem;
       margin: 0 1rem; }
       .social__socials--card-svg {
@@ -383,20 +446,22 @@ body {
       height: 36rem; }
 
 .findus {
+  background: url(../imgs/green-bg.jpg);
+  position: relative;
+  height: 55rem;
   margin-top: 4rem;
-  height: 56rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: url(../imgs/green-bg.jpg); }
+  padding: 5rem 7rem; }
+  @media only screen and (max-width: 56.25em) {
+    .findus {
+      padding: 5rem 3.5rem; } }
+  @media only screen and (max-width: 375px) {
+    .findus {
+      background-image: url(../imgs/find-us-375.jpg); } }
   .findus h2 {
     position: relative;
     font-size: 9rem;
     color: rgba(30, 39, 46, 0.6);
-    z-index: 2;
-    width: 100%;
-    padding: 0 9rem; }
+    z-index: 2; }
   .findus__map {
     margin-top: 1rem;
     width: 62vw;
