--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -3,10 +3,16 @@
   height: 76rem;
   margin-top: 4rem;
   background-image: url(../imgs/product-hanger.jpg);
-  //background-size: cover;
-  //background-position: top;
   padding: 5rem 7rem;
   overflow: hidden;
+
+  @include respond(tab-port) {
+    padding: 5rem 3.5rem;
+  }
+
+  @media only screen and (max-width: 375px) {
+    background-image: url(../imgs/mobilevariantslider375.jpg);
+  }
 
   &::after {
     content: "";
@@ -19,7 +25,18 @@
     z-index: 1;
   }
 
+  &__variants {
+    flex-shrink: 0;
+    flex-basis: 100%;
+
+    &:nth-child(2) {
+      opacity: 0;
+    }
+  }
+
   &__slide {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-shrink: 0;
     transition: all 0.5s ease;
@@ -30,17 +47,45 @@
       left: 0;
       opacity: 0;
 
-      &:checked ~ .products__variants:nth-child(2) {
+      &:checked ~ .products__slide {
+        transform: translateX(-100%);
+      }
+
+      &:checked ~ .products__slide > .products__variants:nth-child(1) {
         opacity: 0;
       }
 
-      &:checked ~ .products__variants:nth-child(3) {
+      &:checked ~ .products__slide > .products__variants:nth-child(2) {
         opacity: 1;
       }
     }
 
-    &-moved1 {
-      transform: translateX(-95%);
+    &-checkbox2 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+
+      &:checked ~ .products__slide {
+        transform: translateX(-150%);
+      }
+
+      &:checked ~ .products__slide > .products__variants:nth-child(2) {
+        @include respond(phone) {
+          overflow: visible;
+        }
+
+        &--variant:nth-child(1) {
+          opacity: 0;
+        }
+      }
+
+      &:checked
+        ~ .products__slide
+        > .products__variants:nth-child(2)
+        > .products__variants--variant:nth-child(1) {
+        opacity: 0;
+      }
     }
 
     &-nav {
@@ -53,6 +98,10 @@
       cursor: pointer;
       justify-content: center;
       z-index: 2;
+
+      @include respond(tab-port) {
+        width: 4rem;
+      }
 
       & svg {
         height: 7rem;
@@ -80,17 +129,22 @@
   &__variants {
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 3rem;
     z-index: 2;
     margin-bottom: 1rem;
     transition: all 0.1s ease;
+    overflow: hidden;
+    flex-shrink: 0;
 
     &--variant {
       height: 49rem;
-      width: 32rem;
+      flex-basis: 34%;
+      flex-shrink: 0;
       background: #ffd26c;
+
+      @include respond(phone) {
+        flex-basis: 50%;
+      }
 
       & figure {
         background: url(../imgs/variant-placeholder.jpg);
@@ -123,12 +177,12 @@
       }
 
       &:nth-child(2) {
-        margin: 0 0.5rem;
+        //margin: 0 0.5rem;
       }
     }
 
     &:nth-child(2) {
-      transform: translateX(2rem);
+      //transform: translateX(2rem);
       z-index: 2;
     }
 
@@ -140,7 +194,6 @@
     &--cassava {
       & figure {
         background: url(../imgs/variant-1.jpg);
-        height: 70%;
       }
     }
   }
@@ -158,6 +211,14 @@
       background: #fff;
       cursor: pointer;
       transition: al 0.5s ease;
+    }
+
+    & span:nth-child(3) {
+      display: none;
+
+      @include respond(phone) {
+        display: inline-block;
+      }
     }
   }
 }
