--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,6 +9,9 @@ body {
 
   @include respond(tab-land) {
     width: 100vw;
-    //padding: 3rem 3.5rem;
+  }
+
+  @include respond(tab-port) {
+    padding: 0 3rem 3rem 3rem;
   }
 }
