--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -142,6 +142,10 @@
       flex-shrink: 0;
       background: #ffd26c;
 
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+
       @include respond(phone) {
         flex-basis: 50%;
       }
