--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ html {
   @media only screen and (max-width: 37.5em) {
     html {
       font-size: 29%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box;
