--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,17 +9,23 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%;
-
+  
   @include respond(tab-land) {
+    // width < 1200?
     font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
   }
 
   @include respond(tab-port) {
-    font-size: 50%;
+    // width < 900?
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
   }
 
   @include respond(phone) {
     font-size: 29%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12, 12/16
   }
 }
 
@@ -29,7 +35,7 @@ body {
   overflow-x: hidden;
 
   @include respond(tab-land) {
-    padding: 4rem 0 0 0 ;
+    padding: 4rem 0 0 0;
   }
 }
 
