--- a/css/style.css
+++ b/css/style.css
@@ -269,10 +269,14 @@ body {
     font-size: 1.7rem;
     color: #fff;
     background: red;
-    border-radius: 3rem;
+    border-radius: 28rem;
     padding: 1.5rem 4rem;
     font-weight: 600;
     cursor: pointer; }
+    @media only screen and (max-width: 37.5em) {
+      .slider--btn {
+        padding: 2.5rem 4rem;
+        font-size: 1.9rem; } }
 
 .visible-slide {
   opacity: 1; }
@@ -399,6 +403,11 @@ body {
         display: inline-block;
         font-size: 1.5rem;
         cursor: pointer; }
+        @media only screen and (max-width: 37.5em) {
+          .products__variants--variant-btn {
+            border-radius: 23rem;
+            padding: 1.4rem 3rem;
+            font-size: 2rem; } }
       .products__variants--variant:nth-child(1) {
         background: #ffd26c; }
     .products__variants:nth-child(2) {
