--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -174,6 +174,12 @@
         display: inline-block;
         font-size: 1.5rem;
         cursor: pointer;
+
+        @include respond(phone) {
+          border-radius: 23rem;
+          padding: 1.4rem 3rem;
+          font-size: 2rem;
+        }
       }
 
       &:nth-child(1) {
