--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -52,7 +52,15 @@ html {
     font-size: 28%;
   }
 
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+    font-size: 28%;
+  }
+
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+    font-size: 30%;
+  }
+
+  @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     font-size: 30%;
   }
 }
