--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,11 @@
   box-sizing: inherit; }
 
 @viewport {
-  zoom: 1;
-  width: device-width; }
-
-@-ms-viewport {
-  zoom: 1;
-  width: device-width; }
+  width: device-width;
+  zoom: 1; }
 
 html {
-  font-size: 62.5%;
+  font-size: 60.5%;
   /*@include respond(tab-land) {
     // width < 1200?
     font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
@@ -454,6 +450,9 @@ body {
   @include respond(phone) {
     height: 76rem;
   }*/ }
+  @media only screen and (max-width: 75em) {
+    .social {
+      padding: 5rem 2.6rem; } }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     .social {
       height: 76rem; } }
@@ -561,9 +560,7 @@ body {
   width: 75vw; }
   @media only screen and (max-width: 75em) {
     .container {
-      width: 100vw; } }
-  @media only screen and (max-width: 56.25em) {
-    .container {
+      width: 100vw;
       padding: 0 3rem 3rem 3rem; } }
 
 /*@import "abstracts/functions";
