--- a/css/style.css
+++ b/css/style.css
@@ -30,22 +30,22 @@ html {
   }*/ }
   @media only screen and (max-width: 75em) {
     html {
-      font-size: 56.25%; } }
+      font-size: 56.25% !important; } }
   @media only screen and (max-width: 56.25em) {
     html {
-      font-size: 47%; } }
+      font-size: 47% !important; } }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     html {
-      font-size: 28%; } }
+      font-size: 28% !important; } }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     html {
-      font-size: 28%; } }
+      font-size: 28% !important; } }
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     html {
-      font-size: 30%; } }
+      font-size: 30% !important; } }
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     html {
-      font-size: 30%; } }
+      font-size: 30% !important; } }
 
 body {
   box-sizing: border-box;
