--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,28 +35,28 @@ html {
 
   @include respond(tab-land) {
     // width < 1200?
-    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    font-size: 56.25% !important; //1 rem = 9px, 9/16 = 50%
   }
 
   @include respond(tab-port) {
     // width < 900?
-    font-size: 47%; //1 rem = 8px, 8/16 = 50%
+    font-size: 47% !important; //1 rem = 8px, 8/16 = 50%
   }
 
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
-    font-size: 28%;
+    font-size: 28% !important;
   }
 
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-    font-size: 28%;
+    font-size: 28% !important;
   }
 
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
-    font-size: 30%;
+    font-size: 30% !important;
   }
 
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-    font-size: 30%;
+    font-size: 30% !important;
   }
 }
 
