--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
   box-sizing: inherit; }
 
 @viewport {
-  width: device-width;
-  zoom: 1; }
+  width: device-width; }
+
+@-ms-viewport {
+  width: device-width; }
 
 html {
   font-size: 60.5%;
