--- a/css/style.css
+++ b/css/style.css
@@ -36,16 +36,16 @@ html {
   @media only screen and (max-width: 56.25em) {
     html {
       font-size: 47% !important; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  @media only screen and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     html {
       font-size: 28% !important; } }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  @media only screen and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     html {
       font-size: 28% !important; } }
-  @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  @media only screen and (min-width: 414px) and (max-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     html {
       font-size: 30% !important; } }
-  @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  @media only screen and (min-width: 414px) and (max-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     html {
       font-size: 30% !important; } }
 
@@ -59,7 +59,7 @@ body {
 
 @font-face {
   font-family: Helvetica Bold;
-  src: url("../../fonts/helvetica_bold.ttf") format("opentype"); }
+  src: url("../fonts/helvetica_bold.ttf") format("opentype"); }
 
 .header {
   height: 7.5rem;
