--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   width: device-width; }
 
 html {
-  font-size: 30% !important;
+  font-size: 60.5%;
   /*@include respond(tab-land) {
     // width < 1200?
     font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
