--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,8 +16,7 @@
 
 html {
   // This defines what 1rem is
-  //font-size: 60.5%;
-  font-size: 30% !important;
+  font-size: 60.5%;
 
   /*@include respond(tab-land) {
     // width < 1200?
